--- a/auth/templates/networks/index.html
+++ b/auth/templates/networks/index.html
@@ -26,7 +26,7 @@
                         <td data-label="ID"><a href="{{ url_for('.networks_edit', id=instance.id) }}">{{ instance.id }}</a></td>
                         <td data-label="Title">{{ render.render(instance.title) }}</td>
                         <td data-label="Description">{{ render.render(instance.description) }}</td>
-                        <td data-label="Created At">{{ render.render(instance.created_at) }}</td>
+                        <td data-label="Created At">{{ render.datetime(instance.created_at) }}</td>
 
                         <td class="actions actions-instance">
                             <a href="{{ url_for('.networks_delete', id=instance.id) }}" class="pure-button">
