use form template in current templates, fix permissions

--- a/auth/templates/shared/delete.html
+++ b/auth/templates/shared/delete.html
@@ -10,7 +10,7 @@
                     <p>Are you sure you want to <em>delete</em> <strong>{{ instance }}</strong>?</p>
 
                     <button type="submit" class="pure-button pure-button-primary">Yes</button>
-                    <button type="button" class="pure-button">No</button>
+                    <button type="button" class="pure-button" onclick="history.back()">No</button>
                 </div>
             </fieldset>
         </form>
