--- a/auth/templates/users/current.html
+++ b/auth/templates/users/current.html
@@ -1,21 +1,11 @@
 {% extends 'layouts/default.html' %}
-{% import 'helpers/render.html' as render %}
-{% from 'helpers/form.html' import group %}
 
 {% set page_title = 'My Account' %}
 
 {% block content %}
     <div class="content">
         <form method="post" action={{ url_for('.my_account') }} class="pure-form pure-form-aligned">
-            {{ form.csrf_token }}
-            {{ group(form.email) }}
-            {{ group(form.password, autocomplete="off") }}
-            {{ group(form.confirm) }}
-
-            <div class="pure-controls">
-                <button type="submit" class="pure-button pure-button-primary">Ok</button>
-                <button type="button" class="pure-button" onclick="history.back()">Cancel</button>
-            </div>
+            {% include 'users/_form.html' %}
         </form>
     </div>
 {% endblock %}
