add div around description

--- a/auth/templates/wifidog/portal.html
+++ b/auth/templates/wifidog/portal.html
@@ -32,7 +32,9 @@
         {% endif %}
 
         {% if gateway.description %}
-            {{ gateway.description }}
+            <div class="description">
+                {{ gateway.description }}
+            </div>
         {% endif %}
 
         <div
