--- a/auth/templates/gateways/edit.html
+++ b/auth/templates/gateways/edit.html
@@ -4,7 +4,7 @@
     <div class="content">
         <form
             method="post"
-            action="{{ url_for('.gateways_edit', id=id) }}"
+            action="{{ action_url }}"
             enctype="multipart/form-data"
             class="pure-form pure-form-aligned"
         >
