--- a/auth/templates/gateway/_form.html
+++ b/auth/templates/gateway/_form.html
@@ -9,6 +9,7 @@
     {{ group(form.title) }}
     {{ group(form.subtitle) }}
     {{ group(form.description) }}
+    {{ group(form.country) }}
 
     {% if logos and form.logo.data %}
         <div class="pure-controls">
