--- a/auth/templates/product/_form.html
+++ b/auth/templates/product/_form.html
@@ -12,6 +12,8 @@
         {{ group(form.gateway) }}
     {% endif %}
 
+    {{ group(form.category) }}
+
     {{ group(form.code) }}
     {{ group(form.title) }}
     {{ group(form.description) }}
