--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -61,7 +61,7 @@
                                                 {{ action }}
                                             </a>
                                             <ul class="pure-menu-children">
-                                                {% for processor in instance.user.country.processors if processor.active %}
+                                                {% for processor in instance.gateway.country.processors if processor.active %}
                                                 <li class="pure-menu-item">
                                                     <a href="{{ url_for('.order_pay', id=instance.id, processor_id=processor.id) }}" class="pure-menu-link">{{ processor.title }}</a>
                                                 </li>
