--- a/auth/templates/order/edit.html
+++ b/auth/templates/order/edit.html
@@ -64,7 +64,7 @@
         {% endfor %}
 
         <h3>
-            Total: {{ render_currency_amount(order.network.currency, order.total) }}
+            Total: {{ render_currency_amount(order.network.currency, order.total_amount) }}
         </h3>
         </div>
     </div>
