--- a/auth/templates/transaction/show.html
+++ b/auth/templates/transaction/show.html
@@ -27,6 +27,7 @@
             <tr><th>Processor</th><td>{{ transaction.processor }}</td></tr>
             <tr><th>Reference</th><td>{{ transaction.processor_reference }}</td></tr>
             <tr><th>Status</th><td>{{ transaction.status }}</td></tr>
+            <tr><th>Cashup</th><td>{{ transaction.cashup }}</td></tr>
         </tbody>
     </div>
 </div>
