--- a/auth/templates/cashup/show.html
+++ b/auth/templates/cashup/show.html
@@ -13,6 +13,10 @@
     {% endif %}
 
     <div>
+        <strong>Created At</strong> {{ instance.created_at | datetimeformat }}
+    </div>
+
+    <div>
         <strong>User</strong> {{ instance.user }}
     </div>
 
